# rust-ollama

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
docs/: PLAN.md
src/: constants.rs  lib.rs  logging.rs  prelude.rs
src/api/: client.rs  list.rs  mod.rs  show.rs
src/api/async/: client.rs  list.rs  mod.rs
src/api/sync/: client.rs  list.rs  mod.rs
src/structs/: mod.rs  model.rs  partialmodel.rs
